Version 6.0.3
- fixed broken connection prompting
- fixed installer that was no longer referencing the right folders for Visual Studio assemblies [bug #44141]

Version 6.0.2
- fixed registration problem with Visual studio (bug #44064)
- fixed problem where stored procedures and functions could not be deleted from server explorer
- changed function generation so that it ignores schema just like we did with tables in 6.0.1

Version 6.0.1
- Fixed problem with the foreign key columns schema collection
- Fixed problem with index column schema collection
- Fixed problem with generation of medium and longtext columns in entity models
- Changed entity framework generation so that schemas are not written out.  This allows
  a single model to swing from one database to another by just changing the connection
  string (bug #43274)
- fixed problem in sql generation that caused decimal values to be generated incorrectly
  when using a certain cultures (bug #43574)

Version 6.0
- Massive speedups
- Improved sql tokenizing speed greatly.  Patch submitted by Maxim Mass (bug #36836)
- Fixed possible overflow bug in MySqlPacket.ReadLong (bug #36997)
- Added UDF schema collection
- Fixed lingering problem related to bug #37239.  If two columns had the same name but  different case then an exception would be thrown.
- Developed and integrated a new sql tokenizer.  This tokenizer now recognizes all comment types and is approx. 40% faster.
- fixed membership provider so that calling GetPassword with an incorrect password will throw the appropriate exception (bug #38939)
- Implemented initial entity framework support

Version 5.2.6
- cleaned up how stored procedure execution operated when the user does or does not have execute privs
  on the routine (bug #40139)
- fixed problem with datetime formatting that causes an extra space to be included between the
  date and time when sent to the server (bug #41021)