@@ -104,20 +104,20 @@ namespace MySql.Data.MySqlClient
             dt.Columns.Add("TABLE_NAME", typeof (string));
             dt.Columns.Add("TABLE_TYPE", typeof (string));
             dt.Columns.Add("ENGINE", typeof (string));
-            dt.Columns.Add("VERSION", typeof (long));
+            dt.Columns.Add("VERSION", typeof (ulong));
             dt.Columns.Add("ROW_FORMAT", typeof (string));
-            dt.Columns.Add("TABLE_ROWS", typeof (long));
-            dt.Columns.Add("AVG_ROW_LENGTH", typeof (long));
-            dt.Columns.Add("DATA_LENGTH", typeof (long));
-            dt.Columns.Add("MAX_DATA_LENGTH", typeof (long));
-            dt.Columns.Add("INDEX_LENGTH", typeof (long));
-            dt.Columns.Add("DATA_FREE", typeof (long));
-            dt.Columns.Add("AUTO_INCREMENT", typeof (long));
+            dt.Columns.Add("TABLE_ROWS", typeof (ulong));
+            dt.Columns.Add("AVG_ROW_LENGTH", typeof (ulong));
+            dt.Columns.Add("DATA_LENGTH", typeof (ulong));
+            dt.Columns.Add("MAX_DATA_LENGTH", typeof (ulong));
+            dt.Columns.Add("INDEX_LENGTH", typeof (ulong));
+            dt.Columns.Add("DATA_FREE", typeof (ulong));
+            dt.Columns.Add("AUTO_INCREMENT", typeof (ulong));
             dt.Columns.Add("CREATE_TIME", typeof (DateTime));
             dt.Columns.Add("UPDATE_TIME", typeof (DateTime));
             dt.Columns.Add("CHECK_TIME", typeof (DateTime));
             dt.Columns.Add("TABLE_COLLATION", typeof (string));
-            dt.Columns.Add("CHECKSUM", typeof (long));
+            dt.Columns.Add("CHECKSUM", typeof (ulong));
             dt.Columns.Add("CREATE_OPTIONS", typeof (string));
             dt.Columns.Add("TABLE_COMMENT", typeof (string));
 
@@ -147,14 +147,14 @@ namespace MySql.Data.MySqlClient
             dt.Columns.Add("TABLE_SCHEMA", typeof (string));
             dt.Columns.Add("TABLE_NAME", typeof (string));
             dt.Columns.Add("COLUMN_NAME", typeof (string));
-            dt.Columns.Add("ORDINAL_POSITION", typeof (long));
+            dt.Columns.Add("ORDINAL_POSITION", typeof (ulong));
             dt.Columns.Add("COLUMN_DEFAULT", typeof (string));
             dt.Columns.Add("IS_NULLABLE", typeof (string));
             dt.Columns.Add("DATA_TYPE", typeof (string));
-            dt.Columns.Add("CHARACTER_MAXIMUM_LENGTH", typeof (long));
-            dt.Columns.Add("CHARACTER_OCTET_LENGTH", typeof (long));
-            dt.Columns.Add("NUMERIC_PRECISION", typeof (long));
-            dt.Columns.Add("NUMERIC_SCALE", typeof (long));
+            dt.Columns.Add("CHARACTER_MAXIMUM_LENGTH", typeof (ulong));
+            dt.Columns.Add("CHARACTER_OCTET_LENGTH", typeof (ulong));
+            dt.Columns.Add("NUMERIC_PRECISION", typeof (ulong));
+            dt.Columns.Add("NUMERIC_SCALE", typeof (ulong));
             dt.Columns.Add("CHARACTER_SET_NAME", typeof (string));
             dt.Columns.Add("COLLATION_NAME", typeof (string));
             dt.Columns.Add("COLUMN_TYPE", typeof (string));
